--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,29 @@
+
+
 body {
-    background-image:image(img/wood.jpeg);
-    background-color: #333333;
+  font-family: “Century Gothic”, CenturyGothic, AppleGothic, sans-serif;
+
 }
 
+h1 {
+  text-align: center;
+  color: #444;
 
+}
+
+h2 {
+  text-align: center;
+}
+
+h5 {
+  text-align: center;
+}
+
+p {
+}
+
+ul {
+}
 
 IMG.centered {
   display: block;
