--- a/css/styles.css
+++ b/css/styles.css
@@ -8,21 +8,27 @@ body {
 h1 {
   text-align: center;
   color: #444;
-
-}
-
-h2 {
-  text-align: center;
+  font-size:55px;
+  line-height: 40px;
+  letter-spacing: -1px;
 }
 
 h5 {
   text-align: center;
 }
 
+h2 {
+  text-align: center;
+}
+
 p {
 }
 
-ul {
+ul.links {
+  text-align: center;
+  font-size:25px;
+  line-height: 10px;
+  letter-spacing: -0.5px;
 }
 
 IMG.centered {
