--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-
-
 body {
   font-family: “Century Gothic”, CenturyGothic, AppleGothic, sans-serif;
 }
@@ -10,6 +8,12 @@ h1 {
   font-size:55px;
   line-height: 40px;
   letter-spacing: -1px;
+}
+
+img.centered {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h5 {
@@ -36,10 +40,4 @@ ul.links {
   text-align: center;
   font-size:25px;
   line-height: 10px;
-}
-
-IMG.centered {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
