--- a/css/styles.css
+++ b/css/styles.css
@@ -10,12 +10,6 @@ h1 {
   letter-spacing: -1px;
 }
 
-img.centered {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 h5 {
   text-align: center;
 }
@@ -26,37 +20,12 @@ h2 {
   letter-spacing: -1px;
 }
 
-strong {
-  font-size:25px;
-  font-family: monospace;
-  color: #00ced1
-}
-
-a {
-  color: #125ca2;
-}
-
-ul.links {
+footer {
+  padding-top: 15px;
   text-align: center;
-  font-size:25px;
-  line-height: 10px;
+  font-size:20px;
 }
 
-.cv h2 {
-  color: #444;
-  font-size: 20px;
-  text-align: left;
-
-}
-
-.column {
-  float: left;
-  width: 300px;
-
-}
-
-.midlist {
-  float: left;
-  width: 300px;
-
+.center {
+  text-align: center;
 }
