--- a/css/styles.css
+++ b/css/styles.css
@@ -3,21 +3,23 @@ body {
 }
 
 h1 {
-  text-align: center;
   color: #444;
   font-size:55px;
   line-height: 40px;
   letter-spacing: -1px;
 }
 
-h5 {
-  text-align: center;
-}
-
 h2 {
-  text-align: center;
   font-size:35px;
   letter-spacing: -1px;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+header {
+  text-align: center;
 }
 
 footer {
