--- a/css/styles.css
+++ b/css/styles.css
@@ -18,14 +18,12 @@ a:hover {
   text-decoration: none;
 }
 
-header {
-  text-align: center;
+.icon {
+  font-size: 30px;
 }
 
-footer {
-  padding-top: 15px;
+header {
   text-align: center;
-  font-size:20px;
 }
 
 .col-md-12 {
