--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,27 @@
 body {
   font-family: “Century Gothic”, CenturyGothic, AppleGothic, sans-serif;
+  text-align: center;
 }
 
 h1 {
   color: #444;
-  font-size:55px;
-  line-height: 40px;
+  font-size: 55px;
   letter-spacing: -1px;
+  margin: 0px;
 }
 
 h2 {
-  font-size:35px;
+  font-size: 35px;
   letter-spacing: -1px;
+  margin: 0px;
+}
+
+h3 {
+  margin: 0px;
+}
+
+a {
+  text-decoration: none;
 }
 
 a:hover {
@@ -22,15 +32,31 @@ a:hover {
   font-size: 30px;
 }
 
-header {
-  text-align: center;
+.carouselbox {
+  margin: 0;
+  width: 100%;
+  height: 70vh;
+  position: relative;
+  overflow: hidden;
 }
 
-.col-md-12 {
-  text-align: center;
+.content {
+  margin: 0;
+  padding: 0;
 }
 
-.padding {
-  padding-top: 45px;
-  padding-bottom: 15px;
+.content li {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  list-style: none;
+}
+
+.carouselbox li {
+  position: absolute;
+  top: 70vh;
+}
+
+.carouselbox li.current {
+  top: 30px;
 }
