--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,29 @@
+* {
+  margin:0;
+  padding:0;
+}
+
 body {
   font-family: “Century Gothic”, CenturyGothic, AppleGothic, sans-serif;
   text-align: center;
+  overflow: hidden;
 }
 
 h1 {
   color: #444;
-  font-size: 55px;
+  padding-top: 10px;
+  font-size: 70px;
   letter-spacing: -1px;
-  margin: 0px;
+  line-height: 80%;
 }
 
 h2 {
-  font-size: 35px;
+  font-size: 30px;
   letter-spacing: -1px;
-  margin: 0px;
 }
 
 h3 {
-  margin: 0px;
+  font-size: 20px;
 }
 
 a {
@@ -33,30 +39,61 @@ a:hover {
 }
 
 .carouselbox {
-  margin: 0;
   width: 100%;
   height: 70vh;
   position: relative;
   overflow: hidden;
 }
 
-.content {
-  margin: 0;
-  padding: 0;
+button {
+  margin-top: 10%;
+  -webkit-appearance: none;
+  outline: none;
+  border: 0;
+  background: transparent;
+  font-size: 70px;
+}
+
+.prev {
+  float: left;
+}
+
+.next {
+  float: right;
 }
 
 .content li {
-  margin: 0;
-  padding: 0;
-  width: 100%;
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
   list-style: none;
+  overflow: hidden;
 }
 
 .carouselbox li {
   position: absolute;
-  top: 70vh;
+  top: 75vh;
 }
 
 .carouselbox li.current {
-  top: 30px;
+  top: 0;
+}
+
+.content img {
+  width: 100%;
+  max-width: 700px;
+}
+
+@media (min-width: 600px) {
+  h1 {
+    font-size: 55px;
+  }
+
+  h2 {
+    font-size: 30px;
+  }
+
+  h3 {
+    font-size: 25px;
+  }
 }
