--- a/css/styles.css
+++ b/css/styles.css
@@ -80,8 +80,8 @@ button {
 }
 
 .content img {
-  width: 100%;
-  max-width: 700px;
+  max-width: 100%;
+  max-height: 65vh;
 }
 
 @media (min-width: 600px) {
@@ -95,5 +95,11 @@ button {
 
   h3 {
     font-size: 25px;
+  }
+
+  button {
+    font-size: 90px;
+    padding-left: 5%;
+    padding-right: 5%;
   }
 }
