--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,8 @@ body {
 
 h1 {
   color: #444;
-  padding-top: 15px;
-  font-size: 70px;
+  padding-top: 35px;
+  font-size: 100px;
   letter-spacing: -1px;
   line-height: 80%;
 }
@@ -22,21 +22,18 @@ h2 {
   letter-spacing: -1px;
 }
 
-h3 {
-  padding: 5px;
-  font-size: 20px;
+span {
+  color: #009D79;
 }
 
-a {
+a.icon {
+  font-size: 60px;
+  color: black;
   text-decoration: none;
 }
 
 a:hover {
   text-decoration: none;
-}
-
-.icon {
-  font-size: 30px;
 }
 
 .carouselbox {
@@ -52,7 +49,7 @@ button {
   outline: none;
   border: 0;
   background: transparent;
-  font-size: 70px;
+  font-size: 80px;
   cursor: pointer;
 }
 
@@ -92,15 +89,16 @@ button {
   }
 
   h2 {
-    font-size: 30px;
+    font-size: 25px;
   }
 
-  h3 {
-    font-size: 25px;
+  a.icon {
+    font-size: 40px;
   }
 
   button {
     font-size: 90px;
+    margin-top: 15%;
     padding-left: 5%;
     padding-right: 5%;
   }
