--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,14 @@
   padding:0;
 }
 
+html {
+  background: linear-gradient(to bottom, rgba(157,213,58,0) 78%,rgba(105,194,79,0) 83%,rgba(95,190,83,0.48) 84%,rgba(0,157,121,0.48) 93%,rgba(0,157,121,0.48) 94%) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
   font-family: “Century Gothic”, CenturyGothic, AppleGothic, sans-serif;
   text-align: center;
