--- a/css/styles.css
+++ b/css/styles.css
@@ -3,17 +3,10 @@
   padding:0;
 }
 
-html {
-  background: linear-gradient(to bottom, rgba(157,213,58,0) 78%,rgba(105,194,79,0) 83%,rgba(95,190,83,0.48) 84%,rgba(0,157,121,0.48) 93%,rgba(0,157,121,0.48) 94%) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
 body {
   font-family: “Century Gothic”, CenturyGothic, AppleGothic, sans-serif;
   text-align: center;
+  overflow: hidden;
 }
 
 h1 {
@@ -57,7 +50,7 @@ button {
   outline: none;
   border: 0;
   background: transparent;
-  font-size: 80px;
+  font-size: 60px;
   cursor: pointer;
 }
 
@@ -92,6 +85,14 @@ button {
 }
 
 @media (min-width: 600px) {
+  html {
+    background: linear-gradient(to bottom, rgba(157,213,58,0) 78%,rgba(105,194,79,0) 83%,rgba(95,190,83,0.48) 84%,rgba(0,157,121,0.48) 93%,rgba(0,157,121,0.48) 94%) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+
   h1 {
     font-size: 55px;
   }
@@ -105,7 +106,7 @@ button {
   }
 
   button {
-    font-size: 90px;
+    font-size: 70px;
     padding-left: 5%;
     padding-right: 5%;
   }
