--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,12 @@
   padding:0;
 }
 
-html.touch body {
-     overflow:hidden;
+html {
+  background: linear-gradient(to bottom, rgba(157,213,58,0) 78%,rgba(105,194,79,0) 83%,rgba(95,190,83,0.48) 84%,rgba(0,157,121,0.48) 93%,rgba(0,157,121,0.48) 94%) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 body {
@@ -42,7 +46,7 @@ a:hover {
 
 .carouselbox {
   width: 100%;
-  height: 70vh;
+  height: 40vh;
   position: relative;
   overflow: hidden;
 }
@@ -88,14 +92,6 @@ button {
 }
 
 @media (min-width: 600px) {
-  html {
-    background: linear-gradient(to bottom, rgba(157,213,58,0) 78%,rgba(105,194,79,0) 83%,rgba(95,190,83,0.48) 84%,rgba(0,157,121,0.48) 93%,rgba(0,157,121,0.48) 94%) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-
   h1 {
     font-size: 55px;
   }
@@ -112,5 +108,9 @@ button {
     font-size: 70px;
     padding-left: 5%;
     padding-right: 5%;
+  }
+
+  .carouselbox {
+    height: 70vh;
   }
 }
