--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
 h1 {
   color: #444;
   padding-top: 35px;
-  font-size: 100px;
+  font-size: 80px;
   letter-spacing: -1px;
   line-height: 80%;
 }
@@ -47,6 +47,7 @@ a:hover {
 .carouselbox {
   width: 100%;
   height: 40vh;
+  margin-top: 30px;
   position: relative;
   overflow: hidden;
 }
@@ -111,6 +112,7 @@ button {
   }
 
   .carouselbox {
+    margin-top: 0px;
     height: 70vh;
   }
 }
