--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,18 @@ button {
     font-size: 40px;
   }
 
+  i {
+    transition: 3s ease;
+  }
+
+  i:hover {
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0) scale(1.3, 1.3);
+    -ms-transform: translateZ(0) scale(1.3, 1.3);
+    transform: translateZ(0) scale(1.3, 1.3);
+    transition: 1s ease;
+  }
+
   button {
     font-size: 70px;
     padding-left: 5%;
