--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,11 @@ button {
   max-height: 65vh;
 }
 
+footer {
+  float: right;
+  padding-right: 10px;
+}
+
 @media (min-width: 600px) {
   h1 {
     font-size: 75px;
