Update background image, and realign footer.

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,8 @@
 }
 
 html {
-  background: linear-gradient(to bottom, rgba(157,213,58,0) 78%,rgba(105,194,79,0) 83%,rgba(95,190,83,0.48) 84%,rgba(0,157,121,0.48) 93%,rgba(0,157,121,0.48) 94%) no-repeat center center fixed;
+  background: url(https://images.unsplash.com/photo-1464618663641-bbdd760ae84a?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=) no-repeat center center fixed;
+  /*background: linear-gradient(to bottom, rgba(157,213,58,0) 78%,rgba(105,194,79,0) 83%,rgba(95,190,83,0.48) 84%,rgba(0,157,121,0.48) 93%,rgba(0,157,121,0.48) 94%) no-repeat center center fixed;*/
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -14,6 +15,7 @@ html {
 body {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
+  overflow: hidden;
 }
 
 h1 {
@@ -93,8 +95,11 @@ button {
 }
 
 footer {
-  float: right;
-  padding-right: 10px;
+  margin-right: 15px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  height: 20px;
 }
 
 @media (min-width: 600px) {
