--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 }
 
 html {
-  background: url(background.jpeg) no-repeat center center fixed;
+  background: url(../img/background.jpeg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
